SwitchWithTypeCoverage 주석 추가